--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^2.20.0
   cloud_firestore: ^4.12.1
   firebase_auth: ^4.12.0
+  firebase_ui_auth: ^1.9.1
+  firebase_dynamic_links: ^5.4.2
+  firebase_ui_oauth_google: ^1.2.13
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +75,10 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
+  fonts:
+    - family: SocialIcons
+      fonts:
+        - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
